Swagger do cad de livro esta funcionado mas não tem as chaves estrangeiras do autor, e ainda criando o add livro no js mas o botão não está funcionando

--- a/CadLivro.html
+++ b/CadLivro.html
@@ -548,7 +548,7 @@
               </details>
 
               <div class="form-actions">
-                <button type="submit">Salvar Livro</button>
+                <button type="submit" onclick="addLivro()">Salvar Livro</button>
                 <button type="reset">Limpar Formulário</button>
               </div>
             </form>
@@ -557,6 +557,7 @@
       </div>
     </main>
     <script src="animation.js"></script>
+    <script src="function.js"></script>
 
   </body>
 </html>
