Não esta completo mas o cadlivro no js ta funcionando agora é so melhorar

--- a/CadLivro.html
+++ b/CadLivro.html
@@ -548,7 +548,7 @@
               </details>
 
               <div class="form-actions">
-                <button type="submit" onclick="addLivro()">Salvar Livro</button>
+                <button type="button" onclick="addLivro()">Salvar Livro</button>
                 <button type="reset">Limpar Formulário</button>
               </div>
             </form>
