Criando a classe autor e dando uma arrumada no banco de dados

--- a/CadLivro.html
+++ b/CadLivro.html
@@ -491,6 +491,15 @@
                   <option value="perdido">Perdido</option>
                   <option value="danificado">Danificado</option>
                 </select>
+
+                <label for="status_emprestimo">Status (‡s)</label>
+                <select id="status_emprestimo" name="status_emprestimo">
+                  <option value="">Selecione o status</option>
+                  <option value="Em estoque">Em estoque</option>
+                  <option value="Devolvido">Devolvido</option>
+                  <option value="Atrasado">Atrasado</option>
+                  <option value="Emprestado">Emprestado</option>
+                </select>
               </details>
               <!-- Exemplares automaticos-->
               <details>
