feito na escola

--- a/CadLivro.html
+++ b/CadLivro.html
@@ -13,7 +13,6 @@
     <!-- Sidebar Overlay (Mobile) -->
     <div class="sidebar-overlay" onclick="toggleSidebar()"></div>
 
-    <!-- Sidebar Navigation -->
     <nav class="sidebar">
       <div class="sidebar-header">
         <h2>Biblioteca</h2>
@@ -22,24 +21,24 @@
       </div>
       <div class="sidebar-nav">
         <ul>
-          <li><a href="index.html">🏠 Início</a></li>
-          <li><a href="CadLivro.html" class="active">📚 Catalogação</a></li>
-          <li><a href="acervo.html">🔍 Consulta ao Acervo</a></li>
-          <li><a href="CadUser.html">👥 Cadastro de Usuários</a></li>
-          <li><a href="admin.html">⚙️ Administração</a></li>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="CadLivro.html" class="active">Catalogação</a></li>
+          <li><a href="acervo.html">Consulta ao Acervo</a></li>
+          <li><a href="CadUser.html">Cadastro de Usuários</a></li>
+          <li><a href="admin.html">Administração</a></li>
         </ul>
+      </div>
+      <div class="sidebar-footer">
+        <a href="login.html" class="login-link">Login</a>
       </div>
     </nav>
     <main>
       <div class="main-content cataloging">
-        <!-- Cabeçalho -->
         <div class="page-header">
           <h1>Cadastro de Livros</h1>
           <p>Gerencie as informações bibliográficas</p>
         </div>
-
-        <!-- Área de formulário -->
-        <div class="forms-container">
+       <div class="forms-container">
           <div class="form-card">
             <form>
               <!-- Campo 020 - ISBN -->
