--- a/acervo.html
+++ b/acervo.html
@@ -20,14 +20,17 @@
     </div>
     <div class="sidebar-nav">
       <ul>
-        <li><a href="index.html">🏠 Início</a></li>
-        <li><a href="CadLivro.html">📚 Catalogação</a></li>
-        <li><a href="acervo.html" class="active">🔍 Consulta ao Acervo</a></li>
-        <li><a href="CadUser.html">👥 Cadastro de Usuários</a></li>
-        <li><a href="admin.html">⚙️ Administração</a></li>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="CadLivro.html">Catalogação</a></li>
+        <li><a href="acervo.html" class="active">Consulta ao Acervo</a></li>
+        <li><a href="CadUser.html">Cadastro de Usuários</a></li>
+        <li><a href="admin.html">Administração</a></li>
       </ul>
     </div>
-  </nav>
+    <div class="sidebar-footer">
+    <a href="login.html" class="login-link">Login</a>
+  </div>
+</nav>
 
   <!-- Botão Mobile -->
   <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
