--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styleLogin.css">
   <link rel="icon" type="image/jpg" href="midia/login.png">
 </head>
 <body>
