--- a/CadUser.html
+++ b/CadUser.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro de Usuários - Biblioteca</title>
-  <link rel="stylesheet" href="styleNovo.css">
+  <link rel="stylesheet" href="styleCadUser.css">
   <link rel="icon" type="image/jpg" href="midia/cadastro.png" >
 </head>
 <body>
@@ -22,12 +22,15 @@
       </div>
       <div class="sidebar-nav">
         <ul>
-          <li><a href="index.html">🏠 Início</a></li>
-          <li><a href="CadLivro.html">📚 Catalogação</a></li>
-          <li><a href="acervo.html">🔍 Consulta ao Acervo</a></li>
-          <li><a href="CadUser.html" class="active">👥 Cadastro de Usuários</a></li>
-          <li><a href="admin.html">⚙️ Administração</a></li>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="CadLivro.html">Catalogação</a></li>
+          <li><a href="acervo.html">Consulta ao Acervo</a></li>
+          <li><a href="CadUser.html" class="active">Cadastro de Usuários</a></li>
+          <li><a href="admin.html">Administração</a></li>
         </ul>
+      </div>
+      <div class="sidebar-footer">
+        <a href="login.html" class="login-link">Login</a>
       </div>
     </nav>
     <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
