--- a/admin.html
+++ b/admin.html
@@ -22,11 +22,15 @@
     </div>
     <div class="sidebar-nav">
       <ul>
-        <li><a href="index.html">🏠 Início</a></li>
-        <li><a href="CadLivro.html">📚 Catalogação</a></li>
-        <li><a href="acervo.html">🔍 Consulta ao Acervo</a></li>
-        <li><a href="CadUser.html">👥 Cadastro de Usuários</a></li>
-        <li><a href="admin.html" class="active">⚙️ Administração</a></li>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="CadLivro.html">Catalogação</a></li>
+        <li><a href="acervo.html">Consulta ao Acervo</a></li>
+        <li><a href="CadUser.html">Cadastro de Usuários</a></li>
+        <li><a href="admin.html" class="active">Administração</a></li>
       </ul>
     </div>
+    <div class="sidebar-footer">
+      <a href="login.html" class="login-link">Login</a>
+    </div>
   </nav>
+  
