--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <!-- Sidebar Overlay (Mobile) -->
   <div class="sidebar-overlay" onclick="toggleSidebar()"></div>
 
-  <!-- Sidebar Navigation -->
   <nav class="sidebar">
     <div class="sidebar-header">
       <h2>Biblioteca</h2>
@@ -24,16 +23,18 @@
     </div>
     <div class="sidebar-nav">
       <ul>
-        <li><a href="index.html" class="active">🏠 Início</a></li>
-        <li><a href="CadLivro.html">📚 Catalogação</a></li>
-        <li><a href="acervo.html">🔍 Consulta ao Acervo</a></li>
-        <li><a href="CadUser.html">👥 Cadastro de Usuários</a></li>
-        <li><a href="admin.html">⚙️ Administração</a></li>
+        <li><a href="index.html" class="active">Início</a></li>
+        <li><a href="CadLivro.html">Catalogação</a></li>
+        <li><a href="acervo.html">Consulta ao Acervo</a></li>
+        <li><a href="CadUser.html">Cadastro de Usuários</a></li>
+        <li><a href="admin.html">Administração</a></li>
       </ul>
     </div>
-  </nav>
+      <div class="sidebar-footer">
+        <a href="login.html" class="login-link">Login</a>
+      </div>
+    </nav>
 
-  <!-- Main Content -->
   <div class="main-content">
     <div class="page-header">
       <h1>Bem-vindo ao Sistema de Biblioteca</h1>
@@ -42,14 +43,14 @@
 
     <div class="forms-container-i">
       <div class="form-card-i">
-        <h3>📚 Sobre o Sistema</h3>
+        <h3>Sobre o Sistema</h3>
         <p>
           Este sistema segue o padrão <strong>MARC 21 simplificado</strong> para cadastro e organização do acervo.
         </p>
       </div>
 
       <div class="form-card-i">
-        <h3>🚀 Como Navegar</h3>
+        <h3>Como Navegar</h3>
         <p>Use o menu lateral para acessar as principais funcionalidades:</p>
         <ul>
           <li>Catalogação de livros</li>
