--- a/CadLivro.html
+++ b/CadLivro.html
@@ -385,10 +385,9 @@ html cadLivro
             <details>
               <summary>Campo 650 - Assunto - Termo Tópico</summary>
               <div class="input-wrapper">
-              <label for="assunto_topico2">Assunto (‡a)</label>
-              <input type="text" id="assunto_topico2" name="campoContagem" maxlength="200" oninput="contarCaracteres(this)"
+              <label for="assunto_topico2">Assunto (‡a)</label> 
+              <input type="text" id="assunto_topico2" name="campoContagem" maxlength="200" oninput="contarCaracteres(this)"  placeholder="Programação de computadores" />
               <span class="input-counter" id="contador">0/200</span>
-                placeholder="Programação de computadores" />
                 </div>
 
                 <div class="input-wrapper">
