--- a/login.html
+++ b/login.html
@@ -11,7 +11,12 @@
 <body>
 
   <div class="container">
-        
+
+        <div class="voltar">
+            <a href="index.html" class="active">
+                <img src="midia/voltar.png" alt="Botão de voltar">
+            </a>
+        </div>
         <div class="icon">
             <img src="midia/ferrucio.png" alt="Logo">
         </div>
@@ -21,12 +26,12 @@
         <form>
             <div class="form-group">
                 <label for="username">Digite seu RM:</label>
-                <input type="number" id="username" name="username" required placeholder="Seu RM">
+                <input type="number" id="username" name="username" required placeholder=" Seu RM">
             </div>
 
             <div class="form-group">
                 <label for="senha">Digite sua senha:</label>
-                <input type="password" id="senha" name="senha" required placeholder="Sua senha">
+                <input type="password" id="senha" name="senha" required placeholder=" Sua senha">
             </div>
 
             <button type="button" class="login-btn" onclick="login()">Login</button>
