criacao de ancoragem

--- a/CadUser.html
+++ b/CadUser.html
@@ -28,8 +28,8 @@ cadUser html
           <li><a href="CadLivro.html">Catalogação</a></li>
           <li><a href="acervo.html">Consulta ao Acervo</a></li>
           <li><a href="CadUser.html" class="active">Cadastro de Usuários</a></li>
-          <li><a href="admin.html">Administração</a></li>
-        </ul>
+        <!--<li><a href="admin.html">Administração</a></li>-->
+      </ul>
       </div>
       <div class="sidebar-footer">
         <a href="login.html" class="login-link">Login</a>
@@ -199,6 +199,7 @@ cadUser html
             </div>
         </div>
     </div>
+    <a href="#" id="btnTopo" class="voltar-topo" ><img src="midia/ancora.png" alt="início da página"></a>
 
     <script src="function.js"></script>
     <script src="animation.js"></script>
