--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="CadLivro.html">Catalogação</a></li>
         <li><a href="acervo.html">Consulta ao Acervo</a></li>
         <li><a href="CadUser.html">Cadastro de Usuários</a></li>
-        <li><a href="admin.html">Administração</a></li>
+        <!--<li><a href="admin.html">Administração</a></li>-->
       </ul>
     </div>
       <div class="sidebar-footer">
@@ -61,7 +61,6 @@
       </div>
     </div>
   </div>
-
   <script src="animation.js"></script>
 </body>
 
