--- a/CadLivro.html
+++ b/CadLivro.html
@@ -30,7 +30,7 @@ html cadLivro
         <li><a href="CadLivro.html" class="active">Catalogação</a></li>
         <li><a href="acervo.html">Consulta ao Acervo</a></li>
         <li><a href="CadUser.html">Cadastro de Usuários</a></li>
-        <li><a href="admin.html">Administração</a></li>
+        <!--<li><a href="admin.html">Administração</a></li>-->
       </ul>
     </div>
     <div class="sidebar-footer">
@@ -40,7 +40,7 @@ html cadLivro
   <main>
     <div class="main-content cataloging">
       <div class="page-header">
-        <h1>Cadastro de Livros</h1>
+        <h1 id="topo">Cadastro de Livros</h1>
         <p>Gerencie as informações bibliográficas</p>
       </div>
       <div class="forms-container">
@@ -319,12 +319,11 @@ html cadLivro
             <!-- Campo 500 - Notas Gerais -->
             <details>
               <summary>Campo 500 - Notas Gerais</summary>
-              <div class="input-wrapper"></div>
+              <div class="input-wrapper">
               <label for="nota">Nota (‡a)</label><!--maxlength="20" oninput="contarCaracteres(this)" ????-->
               <textarea id="nota" name="campoContagem"  rows="4" placeholder="Inclui bibliografia e índice remissivo"></textarea>
               </div>
             </details>
-
             <!-- Campo 600 - Assunto - Nome Pessoal -->
             <details>
               <summary>Campo 600 - Assunto - Nome Pessoal</summary>
@@ -504,6 +503,7 @@ html cadLivro
               <button type="reset">Limpar Formulário</button>
             </div>
           </form>
+          <a href="#" id="btnTopo" class="voltar-topo" ><img src="midia/ancora.png" alt="início da página"></a>
         </div>
       </div>
     </div>
