--- a/acervo.html
+++ b/acervo.html
@@ -24,7 +24,7 @@
         <li><a href="CadLivro.html">Catalogação</a></li>
         <li><a href="acervo.html" class="active">Consulta ao Acervo</a></li>
         <li><a href="CadUser.html">Cadastro de Usuários</a></li>
-        <li><a href="admin.html">Administração</a></li>
+        <!--<li><a href="admin.html">Administração</a></li>-->
       </ul>
     </div>
     <div class="sidebar-footer">
@@ -52,6 +52,8 @@
       <div id="resultados"></div>
     </div>
   </div>
+  <a href="#" id="btnTopo" class="voltar-topo" ><img src="midia/ancora.png" alt="início da página"></a>
+
 
   <script src="function.js"></script>
   <script src="animation.js"></script>
