Alterações feitas na escola 14/10

--- a/CadUser.html
+++ b/CadUser.html
@@ -24,10 +24,12 @@ cadUser html
       </div>
       <div class="sidebar-nav">
         <ul>
-          <li><a href="index.html">Início</a></li>
+          <li><a href="indexBibli.html">Início</a></li>
           <li><a href="CadLivro.html">Catalogação</a></li>
-          <li><a href="acervo.html">Consulta ao Acervo</a></li>
+          <li><a href="acervoBibli.html">Consulta ao Acervo</a></li>
           <li><a href="CadUser.html" class="active">Cadastro de Usuários</a></li>
+          <li><a href="emprestimos.html">Empréstimo</a></li>
+
         <!--<li><a href="admin.html">Administração</a></li>-->
       </ul>
       </div>
