--- a/acervoBibli.html
+++ b/acervoBibli.html
@@ -20,8 +20,13 @@
     </div>
     <div class="sidebar-nav">
       <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="acervo.html" class="active">Consulta ao Acervo</a></li>
+        <li><a href="indexBibli.html">Início</a></li>
+        <li><a href="CadLivro.html">Catalogação</a></li>
+        <li><a href="acervoBibli.html" class="active">Consulta ao Acervo</a></li>
+        <li><a href="CadUser.html">Cadastro de Usuários</a></li>
+        <li><a href="emprestimos.html">Empréstimo</a></li>
+
+        <!--<li><a href="admin.html">Administração</a></li>-->
       </ul>
     </div>
     <div class="sidebar-footer">
