--- a/CadLivro.html
+++ b/CadLivro.html
@@ -1,6 +1,3 @@
-html cadLivro
-
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -15,7 +12,6 @@ html cadLivro
 <body>
   <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
 
-  <!-- Sidebar Overlay (Mobile) -->
   <div class="sidebar-overlay" onclick="toggleSidebar()"></div>
 
   <nav class="sidebar">
@@ -26,10 +22,11 @@ html cadLivro
     </div>
     <div class="sidebar-nav">
       <ul>
-        <li><a href="index.html">Início</a></li>
+        <li><a href="indexBibli.html">Início</a></li>
         <li><a href="CadLivro.html" class="active">Catalogação</a></li>
-        <li><a href="acervo.html">Consulta ao Acervo</a></li>
+        <li><a href="acervoBibli.html">Consulta ao Acervo</a></li>
         <li><a href="CadUser.html">Cadastro de Usuários</a></li>
+        <li><a href="emprestimos.html">Empréstimo</a></li>
         <!--<li><a href="admin.html">Administração</a></li>-->
       </ul>
     </div>
@@ -189,7 +186,7 @@ html cadLivro
               <summary>Campo 110 - Entidade Corporativa</summary>
               <div class="input-wrapper">
               <label for="entidade">Nome da Entidade (‡a)</label>
-              <input type="text" id="entidade" name="campoContagem" maxlength="20" oninput="contarCaracteres(this)" placeholder="Universidade de São Paulo" />
+              <input type="text" id="entidade_nome" name="campoContagem" maxlength="20" oninput="contarCaracteres(this)" placeholder="Universidade de São Paulo" />
               <span class="input-counter" id="contador">0/20</span>
               </div>
 
