--- a/indexBibli.html
+++ b/indexBibli.html
@@ -23,7 +23,12 @@
     <div class="sidebar-nav">
       <ul>
         <li><a href="index.html" class="active">Início</a></li>
-        <li><a href="acervo.html">Consulta ao Acervo</a></li>
+        <li><a href="CadLivro.html">Catalogação</a></li>
+        <li><a href="acervoBibli.html">Consulta ao Acervo</a></li>
+        <li><a href="CadUser.html">Cadastro de Usuários</a></li>
+        <li><a href="emprestimos.html">Empréstimo</a></li>
+
+        <!--<li><a href="admin.html">Administração</a></li>-->
       </ul>
     </div>
       <div class="sidebar-footer">
