--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         
         <h1>LOGIN</h1>
         
-        <form>
+        <form id="loginForm">
             <div class="form-group">
                 <label for="username">Digite seu RM:</label>
                 <input type="number" id="username" name="username" required placeholder=" Seu RM">
@@ -34,7 +34,7 @@
                 <input type="password" id="senha" name="senha" required placeholder=" Sua senha">
             </div>
 
-            <button type="button" class="login-btn" onclick="login()">Login</button>
+            <button type="submit" class="login-btn">Login</button>
         </form>
     </div>
     <script src="function.js"></script>
