Biblioteca retornando tudo

--- a/acervo.html
+++ b/acervo.html
@@ -35,13 +35,14 @@
       <p>Pesquise livros disponíveis na biblioteca</p>
     </div>
     <div class="busca-container">
-      <form class="busca-topo" >
+      <form class="busca-topo">
         <input type="text" id="busca" placeholder="Digite título, autor, assunto ou ano">
         <button type="button" onclick="buscarLivros(); return false;">Pesquisar</button>
         <button type="button" class="btn-limpar" onclick="limparBuscar()">Limpar</button>
       </form>
-
-      <div id="resultados"></div>
+    </div>
+    <div class="acervo-layout">
+      <div id="resultados" class="lista-livros">Os livros irão aparecer aqui!</div>
     </div>
   </div>
   <a href="#" id="btnTopo" class="voltar-topo" ><img src="midia/ancora.png" alt="início da página"></a>
