--- a/indexBibli.html
+++ b/indexBibli.html
@@ -56,10 +56,8 @@
         <h3>Como Navegar</h3>
         <p>Use o menu lateral para acessar as principais funcionalidades:</p>
         <ul>
-          <li>Catalogação de livros</li>
+          <li>Reserva de livros</li>
           <li>Consulta ao acervo</li>
-          <li>Cadastro de usuários</li>
-          <li>Administração e relatórios</li>
         </ul>
       </div>
     </div>
