Eu perdendo minha sanidade para arrumar o autor adicional no cadlivro e mostrando no acervo

--- a/CadLivro.html
+++ b/CadLivro.html
@@ -508,7 +508,7 @@
               <summary>Exemplares Automáticos</summary>
               <div class="input-wrapper">
                 <label for="exemplares_numero">Número de Exemplares: </label>
-                <input type="text" id="exemplares_numeros_volume" name="campoContagem" maxlength="20"
+                <input type="text" id="exemplares_numeros" name="campoContagem" maxlength="20"
                   oninput="contarCaracteres(this)" placeholder="3" />
                 <span class="input-counter" id="contador">0/20</span>
               </div>
@@ -523,7 +523,7 @@
               <div class="input-wrapper">
                 <label for="exemplares_quantidade_volume">Número de Exemplares
                 </label>
-                <input type="text" id="exemplares_quantidade_volume" name="campoContagem" maxlength="20"
+                <input type="text" id="exemplares_quantidade_total" name="campoContagem" maxlength="20"
                   oninput="contarCaracteres(this)" placeholder="3" />
                 <span class="input-counter" id="contador">0/20</span>
               </div>
