--- a/emprestimos.html
+++ b/emprestimos.html
@@ -25,7 +25,7 @@
         <li><a href="indexBibli.html">Início</a></li>
         <li><a href="CadLivro.html">Catalogação</a></li>
         <li><a href="acervoBibli.html">Consulta ao Acervo</a></li>
-        <li><a href="CadUser.html">Usuários</a></li>
+        <li><a href="CadUser.html">Cadastro de Usuários</a></li>
         <li><a href="emprestimo.html" class="active">Empréstimos</a></li>
       </ul>
     </div>
