--- a/indexBibli.html
+++ b/indexBibli.html
@@ -58,6 +58,7 @@
         <ul>
           <li>Reserva de livros</li>
           <li>Consulta ao acervo</li>
+          <li>Cadastro de Usuário e Cadastro de Livro</li>
         </ul>
       </div>
     </div>
